--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,7 +15,6 @@ on:
       - master
       - dev
 
-
 env:
   DOCKER_IMAGE_NAME: ghcr.io/noxworld-dev/opennox
 
@@ -46,6 +45,44 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/ci_tests')
         with:
           name: opennox-win
+          path: |
+            build/opennox.exe
+            build/opennox-hd.exe
+            build/opennox-debug.exe
+            build/opennox-debug-hd.exe
+            build/opennox-server.exe
+            build/*.dll
+          if-no-files-found: error
+          retention-days: 1
+
+  hybrid_docker_win7:
+    # Cross compile Windows binaries with downgraded Go toolkit
+    name: Cross compile for Windows (Win7 compatible)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          submodules: true
+
+      - name: Get go cache
+        uses: actions/cache@v3
+        with:
+          path: gocache
+          key: mingw-win7-gocache-v3-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            mingw-win7-gocache-v3-
+
+      - uses: docker://ghcr.io/noxworld-dev/docker-build:win-go1.21.4
+        name: Docker build
+        env:
+          GOTOOLCHAIN: local
+
+      - uses: actions/upload-artifact@v3
+        name: Upload artifacts
+        if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/ci_tests')
+        with:
+          name: opennox-win7
           path: |
             build/opennox.exe
             build/opennox-hd.exe
@@ -286,11 +323,61 @@ jobs:
               /tmp/opennox-win-release/OpenNox-*.exe
             if-no-files-found: error
 
+  release_repackage_win7:
+      name: Repackage Windows release (Win7 compatible)
+      runs-on: ubuntu-latest
+      if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/ci_tests')
+      needs: [hybrid_docker_win7]
+      steps:
+        - name: Install NSIS
+          run: sudo apt-get install -y nsis
+
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+            submodules: true
+
+        - name: Cleanup
+          run: |
+            rm -rf /tmp/win-tmp
+            mkdir -p /tmp/win-tmp
+
+        - uses: actions/download-artifact@v3
+          with:
+            name: opennox-win7
+            path: /tmp/win-tmp/
+
+        - name: Repackage release
+          run: |
+            ls -lh /tmp/win-tmp/
+            rm -rf /tmp/opennox-win
+            mkdir -p /tmp/opennox-win
+            cp /tmp/win-tmp/*.exe /tmp/opennox-win/
+            cp /tmp/win-tmp/*.dll /tmp/opennox-win/
+            cp ./CHANGELOG.md /tmp/opennox-win/
+
+            rm -rf /tmp/opennox-win-release
+            mkdir -p /tmp/opennox-win-release
+            export VERSION=$(git name-rev --tags --name-only $(git rev-parse HEAD))
+            makensis -DVERSION="win7-$VERSION" -DDATA="/tmp/opennox-win/" -DOUTDIR="/tmp/opennox-win-release/" ./scripts/opennox.nsi
+
+            cd /tmp/opennox-win
+            zip -9 -r /tmp/opennox-win-release/OpenNox-win7-$VERSION.zip ./*
+
+        - name: Upload the archive
+          uses: actions/upload-artifact@v3
+          with:
+            name: opennox-release-win7
+            path: |
+              /tmp/opennox-win-release/OpenNox-win7-*.zip
+              /tmp/opennox-win-release/OpenNox-win7-*.exe
+            if-no-files-found: error
+
   github_release:
     name: Github release
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [release_repackage_linux_appimage, release_repackage_linux_gzip, release_repackage_win]
+    needs: [release_repackage_linux_appimage, release_repackage_linux_gzip, release_repackage_win, release_repackage_win7]
     steps:
       - name: Cleanup
         run: |
@@ -313,6 +400,12 @@ jobs:
         name: Preparing Windows (NSIS installer, Zip archive) files for release.
         with:
           name: opennox-release-win
+          path: /tmp/release-tmp/
+
+      - uses: actions/download-artifact@v3
+        name: Preparing Windows (Win7 compatible) (NSIS installer, Zip archive) files for release.
+        with:
+          name: opennox-release-win7
           path: /tmp/release-tmp/
 
       - name: Releasing prepared files.
