--- a/docker/Dockerfile_server
+++ b/docker/Dockerfile_server
@@ -1,4 +1,4 @@
-FROM golang:1.21-bullseye AS builder
+FROM golang:1.22-bullseye AS builder
 
 ARG UID=1000
 ARG GID=1000
@@ -24,12 +24,13 @@ ADD . .
 RUN go run ./internal/noxbuild server && ./opennox-server -h
 
 
-FROM debian:bullseye
+FROM debian:bullseye AS server
 
 RUN dpkg --add-architecture i386 && \
     apt update && \
     apt upgrade -y && \
-    apt install -y libc6:i386 ca-certificates
+    apt install -y libc6:i386 ca-certificates && \
+    apt-get autoremove -y && apt-get clean -y cache
 
 COPY --from=builder /home/runner/opennox/opennox-server /usr/bin/opennox-server
 
@@ -44,3 +45,16 @@ EXPOSE 6060/tcp
 
 WORKDIR /nox/
 ENTRYPOINT ["opennox-server", "--rcon=:22"]
+
+FROM server AS demo
+
+RUN apt update && \
+    apt upgrade -y && \
+    apt install -y curl unzip cabextract && \
+    apt-get autoremove -y && apt-get clean -y cache
+
+ADD --checksum=sha256:ba01f1b43ff1d95f4cd2ab63abe4572e9b26ab22f1b7bd8b99d852fba6607eec https://archive.org/download/NoxDemo/noxdemo.exe /tmp/noxdemo.exe
+RUN unzip /tmp/noxdemo.exe -d /tmp/noxdemo && rm /tmp/noxdemo.exe
+
+RUN cabextract /tmp/noxdemo/Install/Game1.CAB -d /nox && rm -rf /tmp/noxdemo
+ENV NOX_CHAT_MAP=so_woods
