--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -207,9 +207,10 @@ jobs:
           docker push $DOCKER_IMAGE_NAME:latest
 
   docker_server_demo:
-    name: Docker server build (with demo)
+    name: Docker server build (demo)
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/ci_tests')
+    if: false # TODO: Internet Archive is down, can't download demo installer
+#    if: startsWith(github.ref, 'refs/tags/') || (github.ref == 'refs/heads/dev') || (github.ref == 'refs/heads/ci_tests')
 
     steps:
       - uses: actions/checkout@v3
